Add Section Color
Background color added to major sections

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                         <div class="card-actions"></div>
                     </div>
                 </div>
+            </div>
             <div class="announcement-wrapper">
                 <h2>Announcements</h2>
                     <div class="card">
