--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <main>
             <div class="project-wrapper">
                 <h2>Your Projects</h2>
-                <div class="container">
+                <div class="card-wrapper">
                     <div class="card">
                         <h3>Super Cool Project</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et d</p>
