--- a/index.html
+++ b/index.html
@@ -139,20 +139,32 @@
                 <h2>Trending</h2>
                     <div class="card">
                         <div class="user">
-                            <h4>@tegan</h4>
-                            <p>World Peace Builder</p>
+                            <img class="small-pic" src="img/jett-chibi.png" alt="Profile Picture">
+                            <div class="user-text">
+                                <h4>@tegan</h4>
+                                <p>World Peace Builder</p>
+                            </div>
                         </div>
                         <div class="user">
-                            <h4>@morgan</h4>
-                            <p>Super Cool Project</p>
+                            <img class="small-pic" src="img/killjoy-chibi.jpeg" alt="Profile Picture">
+                            <div class="user-text">
+                                <h4>@morgan</h4>
+                                <p>Super Cool Project</p>
+                            </div>
                         </div>
                         <div class="user">
-                            <h4>@kendall</h4>
-                            <p>Life Changing App</p>
+                            <img class="small-pic" src="img/viper-chibi.jpeg" alt="Profile Picture">
+                            <div class="user-text">
+                                <h4>@kendall</h4>
+                                <p>Life Changing App</p>
+                            </div>
                         </div>
                         <div class="user">
-                            <h4>@alex</h4>
-                            <p>No Traffic Maker</p>
+                            <img class="small-pic" src="img/sage-chibi.jpeg" alt="Profile Picture">
+                            <div class="user-text">
+                                <h4>@alex</h4>
+                                <p>No Traffic Maker</p>
+                            </div>
                         </div>
                     </div>
 
