--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
                 <div class="current-user"></div>
             </div>
             <div class="row">
-                <div class="intro"><p>Hi there,</p><h1 id="user">Morgan Oakley (@morgan)</h1></div>
+                <div class="intro">
+                    <img class="large-pic" src="img/killjoy-chibi.jpeg" alt="">
+                    <div class="intro-text"><p>Hi there,</p><h1 id="user">Morgan Oakley (@morgan)</h1></div>
+                </div>
                 <div class="header-actions"><button>New</button><button>Upload</button><button>Share</button></div>
             </div>
         </header>
